--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -432,6 +432,9 @@ body {
 .flex {
   display: flex;
 }
+.min-h-90 {
+  min-height: 90vh;
+}
 .justify-between {
   justify-content: space-between;
 }
