--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -462,14 +462,40 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
   background-position: center;
   background-repeat: no-repeat;
 }
+/* Video */
+.embed-container { 
+        position: relative;
+        padding-bottom: 56.25%; 
+        height: 0; 
+        overflow: hidden; 
+        max-width: 100%; 
+    }
+.embed-container iframe, 
+    .embed-container object, 
+    .embed-container embed { 
+        position: absolute; 
+          top: 0; 
+          left: 0; 
+          width: 100%; 
+          height: 100%; 
+    }
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
 .flex {
   display: flex;
+}
+.grid {
+  display: grid;
 }
 .min-h-90 {
   min-height: 90vh;
 }
 .min-h-\[20vh\] {
   min-height: 20vh;
+}
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .justify-between {
   justify-content: space-between;
