--- a/style.css
+++ b/style.css
@@ -22,4 +22,27 @@
     .bg-image-style {
         @apply bg-feature/50 bg-no-repeat bg-center bg-cover
     }
+
+    /* Video */
+    .youtube-container { 
+        max-width: 50%;
+    }
+    
+    .embed-container { 
+        position: relative;
+        padding-bottom: 56.25%; 
+        height: 0; 
+        overflow: hidden; 
+        max-width: 100%; 
+    } 
+    
+    .embed-container iframe, 
+    .embed-container object, 
+    .embed-container embed { 
+        position: absolute; 
+          top: 0; 
+          left: 0; 
+          width: 100%; 
+          height: 100%; 
+    }
 }
