--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,29 @@
 <head>
 
     {% include head.html %}
-    
+
 </head>
 
 <body>
-    
-     <!-- Site Header -->
-     {% include site-header.html %}
+
+    <!-- Site Header -->
+    {% include site-header.html %}
 
     {{content}}
 
-	<footer> This is your footer </footer> 
+    <footer> This is your footer </footer>
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js"
+        integrity="sha512-Pqx0ZVocHCSzTLK4pm0GhccHtOT6fmZz+tqfYHV/llI60gB9sr9jkiqrqSEwFJIrzpcZEHPJjsq4GcC731UNXg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"
+        integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- Javascript  -->
+    <script src="/main.js"></script>
 
 </body>
 
