--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
 
     {{content}}
 
-    <footer> This is your footer </footer>
+    <!-- Footer -->
+    {% include site-footer.html %}
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js"
