--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -482,6 +482,12 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.block {
+  display: block;
+}
 .flex {
   display: flex;
 }
@@ -494,6 +500,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .min-h-\[20vh\] {
   min-height: 20vh;
 }
+.w-full {
+  width: 100%;
+}
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -502,6 +511,23 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 }
 .justify-around {
   justify-content: space-around;
+}
+.border {
+  border-width: 1px;
+}
+.border-b {
+  border-bottom-width: 1px;
+}
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+.bg-transparent {
+  background-color: transparent;
 }
 
 
