mana gallery grid

--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -482,11 +482,20 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
 .mb-4 {
   margin-bottom: 1rem;
 }
 .block {
   display: block;
+}
+.inline-block {
+  display: inline-block;
 }
 .flex {
   display: flex;
@@ -505,6 +514,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 }
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.grid-cols-9 {
+  grid-template-columns: repeat(9, minmax(0, 1fr));
 }
 .justify-between {
   justify-content: space-between;
