--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -456,28 +456,41 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
     max-width: 1536px;
   }
 }
+/* Images */
 .bg-image-style {
   background-color: rgb(237 213 135 / 0.5);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
-/* Video */
-.embed-container { 
-        position: relative;
-        padding-bottom: 56.25%; 
-        height: 0; 
-        overflow: hidden; 
-        max-width: 100%; 
+.portrait-tall {
+        padding-bottom: 175%;
     }
-.embed-container iframe, 
-    .embed-container object, 
-    .embed-container embed { 
-        position: absolute; 
-          top: 0; 
-          left: 0; 
-          width: 100%; 
-          height: 100%; 
+.portrait {
+        padding-bottom: 125%;
+    }
+.landscape {
+        padding-bottom: 66%;
+    }
+.landscape-wide {
+        padding-bottom: 56%;
+    }
+/* Video */
+.embed-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        height: 0;
+        overflow: hidden;
+        max-width: 100%;
+    }
+.embed-container iframe,
+    .embed-container object,
+    .embed-container embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
 .col-span-2 {
   grid-column: span 2 / span 2;
@@ -494,20 +507,26 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .block {
   display: block;
 }
-.inline-block {
-  display: inline-block;
-}
 .flex {
   display: flex;
 }
 .grid {
   display: grid;
 }
+.h-\[50vh\] {
+  height: 50vh;
+}
 .min-h-90 {
   min-height: 90vh;
 }
 .min-h-\[20vh\] {
   min-height: 20vh;
+}
+.min-h-50 {
+  min-height: 50vh;
+}
+.min-h-\[50vh\] {
+  min-height: 50vh;
 }
 .w-full {
   width: 100%;
@@ -524,15 +543,14 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .justify-around {
   justify-content: space-around;
 }
+.gap-2 {
+  gap: 0.5rem;
+}
 .border {
   border-width: 1px;
 }
 .border-b {
   border-bottom-width: 1px;
-}
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 .border-white {
   --tw-border-opacity: 1;
@@ -540,6 +558,12 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 }
 .bg-transparent {
   background-color: transparent;
+}
+.bg-\[url\(\'\{\{item\.image_path\}\}\'\)\] {
+  background-image: url('{{item.image_path}}');
+}
+.bg-\[url\(\'\/uploads\/image-1\.jpg\'\)\] {
+  background-image: url('/uploads/image-1.jpg');
 }
 
 
