--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -537,6 +537,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .grid-cols-9 {
   grid-template-columns: repeat(9, minmax(0, 1fr));
 }
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
 .justify-between {
   justify-content: space-between;
 }
