--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,9 @@
         integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+    <!-- Lightgallery for pop-ups  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.1.8/lightgallery.min.js"></script>
+
     <!-- Javascript  -->
     <script src="/main.js"></script>
 
