--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -519,14 +519,14 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .w-full {
   width: 100%;
 }
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .grid-cols-9 {
   grid-template-columns: repeat(9, minmax(0, 1fr));
-}
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .justify-between {
   justify-content: space-between;
@@ -555,6 +555,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 }
 .bg-\[url\(\'\{\{item\.image_path\}\}\'\)\] {
   background-image: url('{{item.image_path}}');
+}
+.bg-\[url\(\'\{\{page\.banner\.image_path\}\}\'\)\] {
+  background-image: url('{{page.banner.image_path}}');
 }
 .font-serif {
   font-family: Italiana, serif;
