--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -495,6 +495,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -524,6 +527,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 }
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 .grid-cols-9 {
   grid-template-columns: repeat(9, minmax(0, 1fr));
@@ -558,6 +564,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 }
 .bg-\[url\(\'\{\{page\.banner\.image_path\}\}\'\)\] {
   background-image: url('{{page.banner.image_path}}');
+}
+.bg-\[url\(\'\{\{page\.course-description\.module\.image_path\}\}\'\)\] {
+  background-image: url('{{page.course-description.module.image_path}}');
 }
 .font-serif {
   font-family: Italiana, serif;
