--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -498,6 +498,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .col-span-4 {
   grid-column: span 4 / span 4;
 }
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -519,6 +522,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 }
 .grid {
   display: grid;
+}
+.list-item {
+  display: list-item;
 }
 .min-h-90 {
   min-height: 90vh;
