--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -495,11 +495,11 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
-.col-span-4 {
-  grid-column: span 4 / span 4;
-}
 .col-span-3 {
   grid-column: span 3 / span 3;
+}
+.col-span-4 {
+  grid-column: span 4 / span 4;
 }
 .my-8 {
   margin-top: 2rem;
@@ -535,9 +535,6 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .min-h-\[90vh\] {
   min-height: 90vh;
 }
-.min-h-\[100vh\] {
-  min-height: 100vh;
-}
 .w-full {
   width: 100%;
 }
@@ -571,13 +568,13 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .border-b {
   border-bottom-width: 1px;
 }
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
 .border-dark {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 .bg-transparent {
   background-color: transparent;
@@ -596,6 +593,9 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 }
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
+}
+.bg-\[url\(\'\{\{page\.who-its-for\.background_image\}\}\'\)\] {
+  background-image: url('{{page.who-its-for.background_image}}');
 }
 .text-left {
   text-align: left;
