--- a/_layouts/free-offering.html
+++ b/_layouts/free-offering.html
@@ -1,20 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+---
+    <!-- Banner -->
+    <section>
+        <span>{{page.banner.text}}</span>
+    </section>
 
-<head>
-
-    {% include head.html %}
-    
-</head>
-
-<body>
-    
-    <header> This is your header </header> 
-
-    {{content}}
-
-	<footer> This is your footer </footer> 
-
-</body>
-
-</html>
+    <!-- Details -->
+    <section>
+        <h1>{{page.details.title}}</h1>
+        <h2>{{page.details.subtitle}}</h2>
+        <p>{{page.details.description_html}}</p>
+        <span>{{page.details.time}} {{page.details.time-zone}}</span>
+        <span>{{page.details.day-of-the-week}}, {{page.details.date}}</span>
+        <a href="#">{{page.deatils.button.text}}</a>
+    </section>
