--- a/_layouts/free-offering.html
+++ b/_layouts/free-offering.html
@@ -1,6 +1,13 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    {% include head.html %}
+
+</head>
+
+<body>
     <!-- Banner -->
     <section>
         <span>{{page.banner.text}}</span>
@@ -30,20 +37,42 @@ layout: default
                 <input type="text" id="first-name" name="first-name" class="block border-b border-white w-full">
                 <label for="first-name">First Name:</label>
             </div>
-    
+
             <div class="mb-4">
                 <input type="text" id="last-name" name="last-name" class="block border-b border-white w-full">
                 <label for="last-name">Last Name:</label>
             </div>
-    
+
             <div class="mb-4">
                 <input type="email" id="email" name="email" class="block border-b border-white w-full">
                 <label for="email">Email:</label>
             </div>
-    
+
             <button type="submit" class="button">Submit</button>
         </form>
 
         <h3>{{page.cta.share-text}}</h3>
         <p>FB IG MAIL</p>
     </section>
+
+    <!-- Footer -->
+    {% include site-footer.html %}
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js"
+        integrity="sha512-Pqx0ZVocHCSzTLK4pm0GhccHtOT6fmZz+tqfYHV/llI60gB9sr9jkiqrqSEwFJIrzpcZEHPJjsq4GcC731UNXg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"
+        integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- Lightgallery for pop-ups  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.1.8/lightgallery.min.js"></script>
+
+    <!-- Javascript  -->
+    <script src="/main.js"></script>
+
+</body>
+
+</html>
