--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -591,17 +591,23 @@ section, div, h1, h2, h3, h4, h5, h6, p, span {
 .bg-\[url\(\'\{\{page\.course-description\.module\.image_path\}\}\'\)\] {
   background-image: url('{{page.course-description.module.image_path}}');
 }
+.bg-\[url\(\'\{\{page\.cta\.background_image\}\}\'\)\] {
+  background-image: url('{{page.cta.background_image}}');
+}
+.bg-\[url\(\'\{\{page\.details\.featured_image\}\}\'\)\] {
+  background-image: url('{{page.details.featured_image}}');
+}
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
 .bg-\[url\(\'\{\{page\.who-its-for\.background_image\}\}\'\)\] {
   background-image: url('{{page.who-its-for.background_image}}');
 }
-.bg-\[url\(\'\{\{page\.details\.featured_image\}\}\'\)\] {
-  background-image: url('{{page.details.featured_image}}');
+.bg-\[url\(\'\{\{page\.background_image\}\}\'\)\] {
+  background-image: url('{{page.background_image}}');
 }
-.bg-\[url\(\'\{\{page\.cta\.background_image\}\}\'\)\] {
-  background-image: url('{{page.cta.background_image}}');
+.bg-\[url\(\'\{\{page\.logo_image\}\}\'\)\] {
+  background-image: url('{{page.logo_image}}');
 }
 .text-left {
   text-align: left;
