--- a/_includes/hero-banner-home.html
+++ b/_includes/hero-banner-home.html
@@ -1,6 +1,6 @@
 <section class="min-h-90" style="background-image: url('{{page.header.image_path}}');">
     <img src="{{page.header.logo}}">
-    <h1 class="font-serif">{{page.header.title}}</h1>
+    <h1>{{page.header.title}}</h1>
     <h2>{{page.header.subtitle}}</h2>
     <h2>{{page.header.subtitle-2}}</h2>
 </section>
